# pfuclt_omni_dataset

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  TODO.txt  package.xml  rosdoc.yaml
CMakeModules/: FindACE.cmake  FindIPP.cmake  FindMKL.cmake
config/: Dynamic.cfg  landmarks.csv  pfuclt_dynamic.cfg  rviz_omni.rviz  rviz_omni_sim.rviz
doc/: manifest.yaml
doc/html/: index-msg.html  index.html
doc/html/c++/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  annotated.html  classes.html  classmini_1_1csv_1_1ifstream.html  classmini_1_1csv_1_1istringstream.html  classmini_1_1csv_1_1ofstream.html  classmini_1_1csv_1_1ostringstream.html  classmini_1_1csv_1_1sep-members.html  classmini_1_1csv_1_1sep.html  classpfuclt_1_1ReadRobotMessages-members.html  classpfuclt_1_1ReadRobotMessages.html  classpfuclt_1_1Robot-members.html  classpfuclt_1_1Robot.html  classpfuclt_1_1RobotFactory-members.html  classpfuclt_1_1RobotFactory.html  classpfuclt_1_1Robot__inherit__graph.map  classpfuclt_1_1Robot__inherit__graph.md5  classpfuclt_1_1SelfRobot-members.html  classpfuclt_1_1SelfRobot.html  classpfuclt_1_1SelfRobot__inherit__graph.map  classpfuclt_1_1SelfRobot__inherit__graph.md5  classpfuclt_1_1TeammateRobot-members.html  classpfuclt_1_1TeammateRobot.html  classpfuclt_1_1TeammateRobot__inherit__graph.map  classpfuclt_1_1TeammateRobot__inherit__graph.md5  classpfuclt__omni__dataset_1_1PFPublisher-members.html  classpfuclt__omni__dataset_1_1PFPublisher.html  classpfuclt__omni__dataset_1_1PFPublisher__inherit__graph.map  classpfuclt__omni__dataset_1_1PFPublisher__inherit__graph.md5  classpfuclt__omni__dataset_1_1ParticleFilter-members.html  classpfuclt__omni__dataset_1_1ParticleFilter.html  classpfuclt__omni__dataset_1_1ParticleFilter__inherit__graph.map  classpfuclt__omni__dataset_1_1ParticleFilter__inherit__graph.md5  classpfuclt__omni__dataset_1_1Robot-members.html  classpfuclt__omni__dataset_1_1Robot.html  classpfuclt__omni__dataset_1_1RobotFactory-members.html  classpfuclt__omni__dataset_1_1RobotFactory.html  (+217 more)
doc/html/msg/: particle.html  particles.html
include/pfuclt_omni_dataset/: pfuclt_aux.h  pfuclt_omni_dataset.h  pfuclt_particles.h  pfuclt_publisher.h
launch/: all_pfuclt.launch  no_player.launch  omni4_pfuclt.launch  pfuclt.launch
msg/: particle.msg  particles.msg
src/: minicsv.cpp  particles.cpp  particles.h  pfuclt_aux.cpp  pfuclt_aux.h  pfuclt_omni_dataset.cpp  pfuclt_omni_dataset.h  pfuclt_particles.cpp  pfuclt_publisher.cpp
