<?xml version="1.0"?>
<package>
  <name>pfuclt_omni_dataset</name>
  <version>0.0.2</version>
  <description>This is a ROS package to systematically read sensor msgs from the omni-dataset (soccer robots dataset) and perform PF-UCLT on it.</description>
  <maintainer email="guilherme.lawless@gmail.com">Guilherme Lawless</maintainer>
  <maintainer email="aamir.iitkgp@gmail.com">aamir</maintainer>
  <license>GPLv3</license>

  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>t2</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>   
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
